--- a/index.css
+++ b/index.css
@@ -18,6 +18,16 @@ header{
     padding-bottom: 0%;
     padding-left: 7%;
     padding-right: 7%;
+    flex: 1 1 0;
+}
+
+header .logo{
+    display: flex;
+    margin-left: 30px;
+    flex: 1 1 0;
+}
+.logo{
+    height: 100px;
 }
 ul{
     list-style-type: none;
@@ -25,8 +35,15 @@ ul{
     gap: 30px;
 }
 
+a{
+    text-decoration: none;
+    color: aliceblue;
+}
 
-
+a:hover{
+    color: #50e8ff;
+    cursor: pointer;
+}
 
 
 .top{
@@ -41,6 +58,7 @@ ul{
     padding-bottom: 3%;
     padding-left: 7%;
     padding-right: 7%;
+    flex: 1 1 0;
 }
 
 
@@ -51,8 +69,8 @@ ul{
 }
 
 .top img{
-    max-height: 300px;
-    max-width: 300px;
+    max-height: 80%;
+    max-width: 80%;
 }
 h2{
     font-size: 48px;
@@ -73,6 +91,11 @@ button{
     margin-top: 5px;
 }
 
+button:hover, button:focus{
+    box-shadow: 0 10px 10px 10px white var(--hover);
+    transform: scale(1.1, 1.1);
+}
+
 .part2{
     max-height: 500px;
     padding-left: 7%;
@@ -87,12 +110,14 @@ button{
    align-items: center;
    gap: 10%;
    margin-top: 50px;
+   flex: 1 1 0;
 }
 .o img{
-    border: 5px solid black;
-    width: 100px;
-    height: 100px;
+    border: 5px solid rgb(76, 246, 255);
+    max-width: 200px;
+    height: 200px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 
@@ -106,10 +131,12 @@ button{
     padding-left: 7%;
     padding-right: 7%;
     font-size: 45px;
+    flex: 1 1 0;
 }
 
 .part3 .credits{
     align-self: flex-end;
+    flex: 1 1 0;
 }
 
 footer{
@@ -121,4 +148,5 @@ footer{
     height: 50px;
     background-color: #1f2937;
     color: #f9faf8;
+    flex: 1 1 0;
 }
